# nix-shell

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  checks.yml
nix/imports/: checks.nix  devshell.nix
nix/pkgs/cargo-clippy/: package.nix
nix/pkgs/markdown-code-runner/: package.nix
src/: cli.rs  command.rs  config.rs  main.rs  runner.rs
tests/: tests.rs
